--- a/example01/package.json
+++ b/example01/package.json
@@ -16,10 +16,13 @@
     "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
+    "react-native-radio-buttons-group": "^3.0.5",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
