--- a/example01/package.json
+++ b/example01/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
+    "react-native-map": "^0.0.1",
     "react-native-radio-buttons-group": "^3.0.5",
     "react-native-web": "~0.19.6"
   },
